--- a/软件安全性测试简要分析.md
+++ b/软件安全性测试简要分析.md
@@ -99,9 +99,14 @@ Software testing, software security, software security testing methods, software
 * 正如分析的一样，测试流程将变得越来越规范化、通用化；测试方法将变得越来越实用化、多样化；测试策略变得越来越合理化、综合化。进而使得当前软件开发的过程也将变得越来越形式化、模型化。因此软件安全性测试理论也需要进一步发展，顺应各种性能的发展需求，像着更加模型化、工程化发展。在这同时，也需要注重测试的自动化程度与执行效率高低。更加值得注意的是，由于软件安全性测试的工作量也是很大的，几乎相当于整个软件安全性工程的二分之一，同时，软件安全性工程与各个过程都有着相应的接口，导致软件安全性测试的理论知识必定会向着工程化方向迈进脚步，逐渐实现与软件安全性工程的融合，进而满足软件各种相应的工程需求。
 * 综上所述，我国软件安全性测试的发展，应当结合自身的特点，在学习和借鉴国外优秀经验的基础上，形成规范化、通用化的测试流程，实用化、多样化的测试方法，合理化、综合化的测试策略与模型化、工程化的测试理论。
 
-七、参考资料
+#### 七、参考资料
+
 1.[软件安全性测试技术探析](https://wenku.baidu.com/view/f27989924128915f804d2b160b4e767f5acf80c2.html)
+
 2.[软件测试国内外发展现状及趋势研究](http://www.doc88.com/p-6901867548670.html)
+
 3.何鑫、郑军、刘畅 软件安全性测试研究综述 计算机测量与控制 2011.19(3) 493-496
+
 4.刘仁千、张玉中、李林林、陈玉涛 软件安全性测试技术研究 国家电网许继集团软件测试室
+
 5.施寅生、邓世伟、谷天阳 软件安全性测试方法研究 微计算机信息（管控一体化） 2018.24(1-3) 56-58
